# geppeto

./: .gitignore  Cargo.toml  README.md  askama.toml  package-lock.json  package.json  tailwind.config.cjs
geppeto/public/js/: helper.js
geppeto/public/templates/: about.html  base.html  checkIn.html  didSend.html  home.html  navigator.html  tank.html  visions.html
public/js/: helper.js
public/styles/: main.css  tailwind.css
public/templates/: base.html  checkIn.html  didSend.html  home.html  keys.html  navigatorSidebar.html  sidebar.html  voice.html
src/: chat_bot.rs  heartbeat.rs  router.rs  token_dispenser.rs
src/lib/: html.rs
src/utils/: gpt.rs  lib.rs  lnd.rs  nostr.rs  secrets_template.rs
