[package]
name = "ge_pe_to"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/utils/lib.rs"

[[bin]]
name = "chat_bot"
path = "src/chat_bot.rs"

[[bin]]
name = "token_dispenser"
path = "src/token_dispenser.rs"

[[bin]]
name = "heartbeat"
path = "src/heartbeat.rs"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"]}
serde_json = "1.0"
url = "2.3.1"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
secp256k1 = "0.27.0"
sha2 = "0.10.6"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21.0"
native-tls = "0.2.11"
httparse = "1.8.0"
http = "0.2.9"
sha1 = "0.10.5"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
futures-channel = "0.3.28"

